fixed footer scrollbar issue

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -16,7 +16,7 @@
     align-items: center;
     gap: 5rem;
     color: color(white);
-    overflow-x: hidden;
+    overflow: hidden;
 
     @include responsive(md) {
       grid-template-columns: 1fr;
